2010-01-30 "G. Allen Morris III" <gam3@gam3.net> release 0.6.2
        * remove setlocal code that was causing a bug.
	* removed some debugging code.

2009-06-31 "G. Allen Morris III" <gam3@gam3.net> release 0.6.1
        * Fix to XShm to solve the 'LCD' Scramble problem.

2006-04-20 "G. Allen Morris III" <gam3@gam3.net>
	* Added simple paste feature
	* Repaired debugger non-readline input 
	* Changed from building with Imakefile to using GNU autoconfig

2005-03-20 "G. Allen Morris III" <gam3@gam3.net>
	* added equal key for + and Meta Keys for Alpha
	* applied a different fix for the arrow repeat key bug 
	* fixed a bug in the timer one logic.  The cursor now flashes on input.

2005-03-20 "G. Allen Morris III" <gam3@gam3.net>
	* added patch [000390] time.h compile bug
	* added patch [000391] Arrow key repeat patch
	* added ChangeLog file

2005-03-18 "G. Allen Morris III" <gam3@gam3.net>
        * starting from x48 0.4.0.