@@ -1,6 +1,6 @@
 
-m4_define(VERSION_MAJOR, [0])
-m4_define(VERSION_MINOR, [6])
-m4_define(PATCHLEVEL, [3])
+m4_define(_VERSION_MAJOR, [0])
+m4_define(_VERSION_MINOR, [6])
+m4_define(_PATCHLEVEL, [3])
 
-m4_define(VERSION_NUMBER, [VERSION_MAJOR.VERSION_MINOR.PATCHLEVEL])
+m4_define(VERSION_NUMBER, [_VERSION_MAJOR._VERSION_MINOR._PATCHLEVEL])
